Project3_Errros.txt
Treasure.java:15: error: no suitable constructor found for RandomOccupant()
        {
        ^
    constructor RandomOccupant.RandomOccupant(Maze,Square) is not applicable
      (actual and formal argument lists differ in length)
    constructor RandomOccupant.RandomOccupant(Maze,long) is not applicable
      (actual and formal argument lists differ in length)
    constructor RandomOccupant.RandomOccupant(Maze) is not applicable
      (actual and formal argument lists differ in length)
Treasure.java:16: error: cannot find symbol
                Random rand = new Random();
                ^
  symbol:   class Random
  location: class Treasure
Treasure.java:16: error: cannot find symbol
                Random rand = new Random();
                                  ^
  symbol:   class Random
  location: class Treasure
Treasure.java:17: error: m has private access in RandomOccupant
                m = maze; 
                ^
Treasure.java:28: error: no suitable constructor found for RandomOccupant()
        {
        ^
    constructor RandomOccupant.RandomOccupant(Maze,Square) is not applicable
      (actual and formal argument lists differ in length)
    constructor RandomOccupant.RandomOccupant(Maze,long) is not applicable
      (actual and formal argument lists differ in length)
    constructor RandomOccupant.RandomOccupant(Maze) is not applicable
      (actual and formal argument lists differ in length)
Treasure.java:29: error: cannot find symbol
                Random rand = new Random();
                ^
  symbol:   class Random
  location: class Treasure
Treasure.java:29: error: cannot find symbol
                Random rand = new Random();
                                  ^
  symbol:   class Random
  location: class Treasure
Treasure.java:30: error: m has private access in RandomOccupant
                m = maze; 
                ^
Treasure.java:32: error: m has private access in RandomOccupant
                int rows = m.rows();
                           ^
Treasure.java:33: error: m has private access in RandomOccupant
                int cols = m.cols();
                           ^
Treasure.java:42: error: no suitable constructor found for RandomOccupant()
        {
        ^
    constructor RandomOccupant.RandomOccupant(Maze,Square) is not applicable
      (actual and formal argument lists differ in length)
    constructor RandomOccupant.RandomOccupant(Maze,long) is not applicable
      (actual and formal argument lists differ in length)
    constructor RandomOccupant.RandomOccupant(Maze) is not applicable
      (actual and formal argument lists differ in length)
Treasure.java:43: error: m has private access in RandomOccupant
                m = maze;
                ^
Treasure.java:57: error: cannot find symbol
                Square s = this.location;
                               ^
  symbol: variable location
13 errors
